# STM32-Smart-Home-Hub

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
app/: CMakeLists.txt
app/assets/: config.yaml  zigbee_devices.json
app/cmake/: arm-linux-gnueabihf-ci.cmake  arm-linux-gnueabihf.cmake
app/include/smarthub/automation/: Automation.hpp  AutomationManager.hpp
app/include/smarthub/core/: Application.hpp  Config.hpp  EventBus.hpp  Logger.hpp
app/include/smarthub/database/: Database.hpp
app/include/smarthub/devices/: Device.hpp  DeviceGroup.hpp  DeviceManager.hpp  DeviceTypeRegistry.hpp  IDevice.hpp  Room.hpp
app/include/smarthub/devices/types/: ColorLightDevice.hpp  DimmerDevice.hpp  MotionSensor.hpp  SwitchDevice.hpp  TemperatureSensor.hpp
app/include/smarthub/network/: NetworkManager.hpp
app/include/smarthub/protocols/: IProtocolHandler.hpp  ProtocolFactory.hpp
app/include/smarthub/protocols/http/: HttpClient.hpp
app/include/smarthub/protocols/mqtt/: MqttClient.hpp
app/include/smarthub/protocols/wifi/: MqttDiscovery.hpp  ShellyDevice.hpp  TuyaDevice.hpp  WifiHandler.hpp
app/include/smarthub/protocols/zigbee/: ZclConstants.hpp  ZigbeeCoordinator.hpp  ZigbeeDeviceDatabase.hpp  ZigbeeHandler.hpp  ZnpFrame.hpp  ZnpTransport.hpp
app/include/smarthub/rpmsg/: RpmsgClient.hpp
app/include/smarthub/security/: ApiTokenManager.hpp  CertManager.hpp  CredentialStore.hpp  SessionManager.hpp  SetupManager.hpp  UserManager.hpp
app/include/smarthub/ui/: AnimationManager.hpp  DisplayManager.hpp  Screen.hpp  ScreenManager.hpp  ThemeManager.hpp  UIManager.hpp
app/include/smarthub/ui/screens/: AboutScreen.hpp  AddAutomationScreen.hpp  AddDeviceScreen.hpp  AutomationListScreen.hpp  DashboardScreen.hpp  DeviceListScreen.hpp  DisplaySettingsScreen.hpp  EditAutomationScreen.hpp  EditDeviceScreen.hpp  LightControlScreen.hpp  NotificationScreen.hpp  RoomDetailScreen.hpp  SecuritySettingsScreen.hpp  SensorHistoryScreen.hpp  SensorListScreen.hpp  SettingsScreen.hpp  WifiSetupScreen.hpp
app/include/smarthub/ui/widgets/: Header.hpp  LoadingSpinner.hpp  NavBar.hpp  RoomCard.hpp  TimeSeriesChart.hpp
app/include/smarthub/web/: WebServer.hpp
app/src/: main.cpp
app/src/automation/: Automation.cpp  AutomationManager.cpp
app/src/core/: Application.cpp  Config.cpp  EventBus.cpp  Logger.cpp
app/src/database/: Database.cpp
app/src/devices/: Device.cpp  DeviceGroup.cpp  DeviceManager.cpp  DeviceTypeRegistry.cpp  Room.cpp
app/src/devices/types/: ColorLightDevice.cpp  DimmerDevice.cpp  MotionSensor.cpp  SwitchDevice.cpp  TemperatureSensor.cpp
app/src/network/: NetworkManager.cpp
app/src/protocols/: ProtocolFactory.cpp
app/src/protocols/http/: HttpClient.cpp
app/src/protocols/mqtt/: MqttClient.cpp
app/src/protocols/wifi/: MqttDiscovery.cpp  ShellyDevice.cpp  TuyaDevice.cpp  WifiHandler.cpp
app/src/protocols/zigbee/: ZigbeeCoordinator.cpp  ZigbeeDeviceDatabase.cpp  ZigbeeHandler.cpp  ZnpFrame.cpp  ZnpTransport.cpp
app/src/rpmsg/: RpmsgClient.cpp
app/src/security/: ApiTokenManager.cpp  CertManager.cpp  CredentialStore.cpp  SessionManager.cpp  SetupManager.cpp  UserManager.cpp
app/src/ui/: AnimationManager.cpp  DisplayManager.cpp  Screen.cpp  ScreenManager.cpp  ThemeManager.cpp  UIManager.cpp
app/src/ui/screens/: AboutScreen.cpp  AddAutomationScreen.cpp  AddDeviceScreen.cpp  AutomationListScreen.cpp  DashboardScreen.cpp  DeviceListScreen.cpp  DisplaySettingsScreen.cpp  EditAutomationScreen.cpp  EditDeviceScreen.cpp  LightControlScreen.cpp  NotificationScreen.cpp  RoomDetailScreen.cpp  SecuritySettingsScreen.cpp  SensorHistoryScreen.cpp  SensorListScreen.cpp  SettingsScreen.cpp  WifiSetupScreen.cpp
app/src/ui/widgets/: Header.cpp  LoadingSpinner.cpp  NavBar.cpp  RoomCard.cpp  TimeSeriesChart.cpp
app/src/web/: WebServer.cpp
app/tests/: CMakeLists.txt  main.cpp
app/tests/automation/: test_automation.cpp  test_automation_screens.cpp
app/tests/core/: test_config.cpp  test_eventbus.cpp  test_logger.cpp
app/tests/database/: test_database.cpp
app/tests/devices/: test_device.cpp  test_device_manager.cpp  test_organization.cpp
app/tests/integration/: test_integration.cpp
app/tests/mocks/: MockDevice.hpp  MockProtocolHandler.hpp
app/tests/network/: test_network.cpp
app/tests/protocols/: test_mqtt.cpp  test_protocol_factory.cpp  test_wifi.cpp  test_zigbee.cpp
app/tests/rpmsg/: test_rpmsg.cpp
app/tests/security/: test_security.cpp
app/tests/ui/: test_screen_manager.cpp  test_screens.cpp  test_theme_manager.cpp  test_ui.cpp  test_widgets.cpp
app/tests/web/: test_web_api.cpp  test_webserver.cpp
buildroot/: Config.in  external.desc  external.mk
docs/: MASTER_PLAN.md  PHASE_0_COMPLETED.md  PHASE_0_TODO.md  PHASE_1_COMPLETED.md  PHASE_1_TODO.md  PHASE_2_COMPLETED.md  PHASE_2_TODO.md  PHASE_3_COMPLETED.md  PHASE_3_TODO.md  PHASE_4_COMPLETED.md  PHASE_4_TODO.md  PHASE_5_COMPLETED.md  PHASE_5_TODO.md  PHASE_6_COMPLETED.md  PHASE_6_TODO.md  PHASE_7_COMPLETED.md  PHASE_7_TODO.md  PHASE_8_PLAN.md  PHASE_8_TODO.md  animations.md  api.md  architecture.md  automation.md  building.md  buildroot.md  cc2652p-integration.md  devices.md  hardware_interfaces.md  lab-operations.md  m4-firmware.md  mqtt.md  networking.md  protocols.md  rpmsg.md  security.md  testing.md  ui-architecture.md  web-dashboard.md  (+2 more)
m4-firmware/: CMakeLists.txt
m4-firmware/include/smarthub_m4/: stm32mp1xx.h
m4-firmware/include/smarthub_m4/drivers/: clock.hpp  gpio.hpp  i2c.hpp
m4-firmware/include/smarthub_m4/rpmsg/: rpmsg.hpp
m4-firmware/include/smarthub_m4/sensors/: sensor_manager.hpp  sht31.hpp
m4-firmware/linker/: stm32mp15xx_m4.ld
m4-firmware/src/: main.cpp
m4-firmware/src/drivers/: gpio.cpp  i2c.cpp
m4-firmware/src/rpmsg/: resource_table.c  rpmsg.cpp
m4-firmware/src/sensors/: sensor_manager.cpp  sht31.cpp
m4-firmware/src/system/: clock.cpp  startup.cpp
m4-firmware/tests/: CMakeLists.txt  test_i2c_transactions.cpp  test_main.cpp  test_message_types.cpp  test_rpmsg_protocol.cpp  test_sensor_manager.cpp  test_sht31_calculations.cpp
(+41 files in other folders)
